--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,18 @@ services:
       - 3000:3000
     labels:
       io.balena.features.supervisor-api: 1
+    
+  multiroom-server:
+    build: ./core/multiroom/server
+    restart: on-failure
+    ports:
+      - 1704:1704
+      - 1705:1705
+      - 1780:1780
+
+  multiroom-client:
+    build: ./core/multiroom/client
+    restart: on-failure
 
   # Plugins
   bluetooth:
